--- a/index.html
+++ b/index.html
@@ -114,11 +114,9 @@
         <div class="container section-title">
           <h2>About</h2>
           <p>
-            Versatile IT professional with experience in cloud computing, web
-            development, and IT support. Proven ability to design and implement
-            cloud solutions, develop web applications, and provide technical
-            support. Adept at collaborating with cross-functional teams to
-            deliver high-quality projects on time.
+            IT professional with two years of experience in cloud roles and a strong foundation in technical support. Currently
+advancing skills in full-stack development, with a keen interest in building efficient, user-focused web applications. Driven
+by a commitment to continuous learning and practical, innovative solutions.
           </p>
         </div>
         <!-- End Section Title -->
